--- a/utils/styles.css
+++ b/utils/styles.css
@@ -5,18 +5,22 @@
 :root
 {
   --picdomain: url("https://picsum.photos/350/200");
-  --small-image: url('https://picsum.photos/110');
   background: lightgray;
   --root-bg: #d3d3d3;
   --secondary-bg: #ffffff;
   font-family: 'Roboto';
   --theme-color: #6200ee;
+  --sec-theme-color: #AA4FFF;
 }
 
 body {
     padding: 0;
     margin: 0;
     display: block;
+}
+
+i {
+    cursor: pointer;
 }
 
 h1 {
@@ -31,7 +35,7 @@ input {
 
 .component_name {
     text-align: center;
-    color: var(--theme-color);
+    color: var(--sec-theme-color);
 }
 
 /* ================== Cards ================== */
@@ -150,4 +154,46 @@ input {
 .plus-icon {
     padding-top: 8px;
     margin-left: -32px;
+}
+
+/* =========== Header Container ============ */
+
+.header_container {
+    display: flex;
+    flex-direction: column;
+}
+
+.header {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    background: var(--theme-color);
+    color: var(--secondary-bg);
+    min-width: 100%;
+    padding: 20px;
+}
+
+.header_icons {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    margin-left: auto;
+}
+
+.header_title {
+    font-weight: 400;
+}
+
+.fixed {
+    position: fixed;
+}
+
+.short {
+    max-width: 50%;
+    margin: auto;
+}
+
+.collapsed {
+    max-width: 80px;
+    margin: auto;
 }
